# devanagari-to-roman-script-transliteration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/hindi_transliteration/: __init__.py  constants.py  transliterator.py
tests/: test_transliterator.py
tests/data/: test_cases.yaml
